<resources>
    <string name="app_name">PopFact</string>
    <string name="welcome">Welcome!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up_text">First time? Sign up!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="report_name">Please input your name</string>
    <string name="report_here">Report Here</string>
    <string name="write_1">Write to cloud</string>
    <string name="read">Read from cloud</string>
    <string name="KQ1">How many years were BTS band members have been together?</string>
    <string name="KQ1A1">9 years</string>
    <string name="KQ1A2">3 years</string>
    <string name="KQ1_correct">The band was debuted in 2013 that makes the boys live in limelight for 5 years now. However, as Korean entertainment industry standard, all k-pop bands have a long training period that could last decades! Luckily for BTS, their training period was only 4 years.</string>
    <string name="KQ2">How many band members are there in BTS group?</string>
    <string name="KQ2A1">7</string>
    <string name="KQ2A2">9</string>
    <string name="KQ2_correct">Kpop bands rarely has solo or duo artists. Instead, they are known for girl groups and boy bands. 7 members in a band is considered not too big since “Super Junior” had 13 and “Apeace” has 21</string>
    <string name="KQ3">What color is BTS fanbase?</string>
    <string name="KQ3A1">Silver</string>
    <string name="KQ3A2">Blue</string>
    <string name="KQ3_correct">All kpop fanbase has their own color and name. You can call BTS fanbase their A.R.M.Y (Adorable Representative MC for Youth). If you are interested, here’s some more: EXO’s fanclub is called EXO-L and their color is Cosmic Latte. 2NE1’s fans go by BlackJacks and use Hot Pink as their color.</string>
    <string name="KQ4">Who is BTS’ “leader”?</string>
    <string name="KQ4A1">Rap Monster</string>
    <string name="KQ4A2">Suga</string>
    <string name="KQ4_correct">Every kpop band has their leader, who are usually the oldest member of the band. Moreover, there are other “roles” in the band too such as the vocalist, the dancer, the rapper, the visual (the most good-looking), The Face of The Group (spokesperson), the center (the most popular), and the maknae (the youngest)</string>
    <string name="KQ5">What entertainment company manages BTS?</string>
    <string name="KQ5A1">JYP</string>
    <string name="KQ5A2">Big Hit</string>
    <string name="KQ5_correct">Yes! Despite their name, Big Hit is a rather small entertainment company considered that there are three monopoly in Korean entertainment industry, JYP, S.M. Entertainment, YG Entertainment.</string>
    <string name="LQ1">What does the name Mashrou3 Leila mean?</string>
    <string name="LQ1A1">An Overnight \n Project</string>
    <string name="LQ1A2">Leila’s \nproject</string>
    <string name="LQ1_correct">Both are correct! Mashrou3 Leila is well-known to use wordplay in their lyrics and, apparently, in their band’s name! The “overnight” meaning refers to their beginning as an indie band playing at the members’ alma mater, American University of Beirut. The “Leila” meaning comes from a common Arab name for women. </string>
    <string name="LQ2">What country is Mashrou3 Leila from?</string>
    <string name="LQ2A1">Egypt</string>
    <string name="LQ2A2">Lebanon</string>
    <string name="LQ2_correct">Egypt and Lebanon are the two biggest exporter of entertainment in Arab region due to the countries’ relative liberal culture in the region. However, our boys  are from Lebanon!</string>
    <string name="LQ3">What entertainment company manages Mashrou3 Leila?</string>
    <string name="LQ3A1">None</string>
    <string name="LQ3A2">Incognito</string>
    <string name="LQ3_correct">Despite their phenomenal success, Mashrou3 Leila is an independent band. The band won a competition in their college years and signed with Incognito record but, after one album together, the band wanted to work more independently and have been releasing three album purely from crowdfunding.</string>
    <string name="LQ4">What is Mashrou3 Leila’s first hit “Fasateen” about?</string>
    <string name="LQ4A1">Women empowerment</string>
    <string name="LQ4A2">Poverty</string>
    <string name="LQ4_correct">Fasateen is about a couple who was in love and promised to be together. However, they cannot afford marriage and the woman changed her mind and left the man. This song reflects reality of limited employment in Arab region and its consequences in society. This is one of the causes of Arab Spring. The band’s songs usually depict current political issue. </string>
    <string name="LQ5">A number of the band’s concert audience was arrested in September 2017, while the band is playing in Egypt. What is the cause?</string>
    <string name="LQ5A1">Waving a rainbow flag</string>
    <string name="LQ5A2">Consuming alcohol</string>
    <string name="LQ5_correct">With the band’s political theme, they have sparked controversies and targeted many governments’ attention. During one of Mashrou3 Leila’s concert in Egypt, some fans were arrested for waving rainbow flags. Although homosexuality is not illegal in Egypt, showing homosexual acts in public is.</string>
    <string name="PRQ1">What is Daddy Yankee’s hit “Despacito” about?</string>
    <string name="PRQ1A1">Summer fun</string>
    <string name="PRQ1A2">A love story</string>
    <string name="PRQ1_correct">“Despacito” means “Slowly” so this song is about how the singers, Luis Fonsi and Daddy Yankee, want to take this love slowly to not mess it up. But what this song is about is not that much of a big deal. The big deal is that this song is the first “Reggaeton” song to top Billboard chart!</string>
    <string name="PRQ2">In what decade did Reggaeton was originated?</string>
    <string name="PRQ2A1">1960s</string>
    <string name="PRQ2A2">1990s</string>
    <string name="PRQ2_correct">Because of names that are quite similar, people might mistake Reggaeton with Raggae. Reggaeton was first started in Puerto Rico in 1991 while Raggae was originated from Jamaica in 1960s</string>
    <string name="PRQ3">Since Reggaeton was around for more than 20 years, it is quite surprising that it has just caught with mainstream appreciation. Why so?</string>
    <string name="PRQ3A1">Reggaeton was \nconsidered \n underground \nfor long time</string>
    <string name="PRQ3A2">The early \nReggaeton \nmusic was not \nas good</string>
    <string name="PRQ3_correct">Because of provocative lyrics and dancing style, Reggaeton was deemed too edgy for big labels.</string>
    <string name="app_name_TH">ป๊อปแฟค</string>
    <string name="welcome_TH">ยินดีต้อนรับ!</string>
    <string name="username_TH">ยูสเซอร์เนม</string>
    <string name="password_TH">พาสเวิร์ด</string>
    <string name="sign_up_TH">สมัครเข้าใช้งาน</string>
    <string name="sign_in_TH">ลงชื่อเข้าใช้งาน</string>
    <string name="sign_out_TH">ออกจากระบบ</string>
    <string name="correct_TH">ถูกต้อง</string>
    <string name="incorrect_TH">ผิด</string>
    <string name="report_name_TH">ลงชื่อที่นี่</string>
    <string name="report_here_TH">รายงานที่นี่</string>
    <string name="write_TH">เขียน</string>
    <string name="read_TH">อ่าน</string>
    <string name="KQ1_TH">วง BTS ร่วมงานกันมาเป็นเวลานานเท่าไร</string>
    <string name="KQ1A1_TH">9 ปี</string>
    <string name="KQ1A2_TH">3 ปี</string>
    <string name="KQ1_correct_TH">ถึงแม้ว่าวง BTS จะออกผลงานมาให้เราเห็นกันตั้งแต่ปี 2013 เป็นเวลา 5 ปีแล้ว แต่ในความเป็นจริง พวกเขาร่วมฝึกกันมาก่อนออกผลงานมา 4 ปีแล้ว วงอื่นในวงการบันเทิงเกาหลีก็มีเวลาฝึกฝนเป็นเวลานานเช่นเดียวกัน บางวงใช้เวลาฝึกนานร่วมทศวรรต!</string>
    <string name="KQ2_TH">วง  BTS มีสมาชิกทั้งหมดกี่คน</string>
    <string name="KQ2A1_TH">7 คน</string>
    <string name="KQ2A2_TH">9 คน</string>
    <string name="KQ2_correct_TH">วงดนตรีเกาหลีแทบจะไม่เคยมีศิลปินเดี่ยว หรือคู่เลย ส่วนใหญ่จะเป็นวงใหญ่ หญิงล้วนหรือชายล้วนเท่านั้น ที่จริงแล้ววง 7 คนไม่ถือว่าใหญ่เลย วง Super Junior มีสมาชิกถึง 13 คน และวง Apeace มีสมาชิก 21 คน</string>
    <string name="KQ3_TH">สีประจำแฟนคลับของวง BTS คือสีอะไร</string>
    <string name="KQ3A1_TH">สีเงิน</string>
    <string name="KQ3A2_TH">สีฟ้า</string>
    <string name="KQ3_correct_TH">แฟนคลับของวงดนตรีเกาหลีทุกวงมีชื่อและสีเป็นของตนเอง แฟนคลับของวง BTS ชื่อ อาร์มี่ หรือ A.R.M.Y (Adorable Representative MC for Youth) ถ้าอยากรู้อีกละก็ แฟนคลับวง EXO ชื่อ EXO-L สีประจำคือคอสมิคลาเต้ ส่วนแฟนคลับวง 2NE1 ชื่อแบล็คแจ๊ค ใช้สีชมพูแจ๊ดเป็นสีประจำกลุ่ม</string>
    <string name="KQ4_TH">หัวหน้าวง BTS คือใคร</string>
    <string name="KQ4A1_TH">แรปมอนสเตอร์</string>
    <string name="KQ4A2_TH">ซูก้า</string>
    <string name="KQ4_correct_TH">วงเคป๊อปทุกวงมีหัวหน้าวง ซึ่งโดยทั่วไปแล้วมักจะเป็นสมาชิกที่อายุมากที่สุดของวง หน้าที่อื่นๆของสมาชิก ได้แก่ เสียงหลัก เต้นหลัก หน้าตาดี นักพูด แฟนคลับเยอะที่สุด และเด็กน้อย</string>
    <string name="KQ5_TH">วง BTS อยู่ภายใต้สังกัดของค่ายใด</string>
    <string name="KQ5A1_TH">เจวายพี</string>
    <string name="KQ5A2_TH">บิ๊กฮิต</string>
    <string name="KQ5_correct_TH">อย่าไปสนใจชื่อ! ถึงแม้ชื่อค่ายบิ๊กฮิตจะแปลว่าใหญ่ แต่ที่จริงแล้ว ในวงการบันเทิงเกาหลีค่ายใหญ่มีแค่สามค่าย ได้แก่ เจวายพี เอสเอ็มเอนเตอร์เทนเมนต์ และวายจี บิ๊กฮิตเป็นค่ายเล็กเท่านั้น</string>
    <string name="LQ1_TH">ชื่อวง Mashrou3 Leila แปลว่าอะไร</string>
    <string name="LQ1A1_TH">วงข้ามคืน</string>
    <string name="LQ1A2_TH">วงเลย์ล่า</string>
    <string name="LQ1_correct_TH">ถูกทั้งคู่! วง Mashrou3 Leila นี้มีชื่อเสียงโด่งดังเรื่องการเล่นคำ ชื่อวงของพวกเขาจึงเป็นการเล่นคำไปด้วย วงข้ามคืนเป็นการกล่าวถึงจุดเริ่มต้นดมื่อพวกเขาเป็นวงในมหาวิทยาลัยที่เล่นในเวลากลางคืนเท่านั้น ชื่อเลย์ล่าเป็นชื่อที่พบเห็นได้ทั่วไปในเลบานอน</string>
    <string name="LQ2_TH">วง Mashrou3 Leila มาจากประเทศใด</string>
    <string name="LQ2A_TH">อียิปต์</string>
    <string name="LQ2A2_TH">เลบานอน</string>
    <string name="LQ2_correct_TH">ทั้งอียิปต์และเลบานอนเป็นผู้ผลิตสื้อบันเทิงหลักในตะวันออกกลาง แต่วงนี้มาจากเลบานอน</string>
    <string name="LQ3_TH">วง Mashrou3 Leila สังกัดค่ายใด</string>
    <string name="LQ3A1_TH">ไม่สังกัด</string>
    <string name="LQ3A2_TH">อินค็อกนิโต้</string>
    <string name="LQ3_correct_TH">ถึงแม้จะเป็นวงที่โด่งดัง วง Mashrou3 Leila ไม่สังกัดค่ายใดเลย พวกเขาเซ็นสัญญากับค่ายอินค็อกนิโต้ แต่หลังจากที่มีข้อถกเถียงกันไป พวกเขาก็เริ่มทำเพลงจากการรวมเงินของประชาชนมาได้ 3 อัลบั้มแล้ว</string>
    <string name="PRQ1_TH">เพลง “Despacito” ของแดดดี้แยงกี้เกี่ยวกับอะไร</string>
    <string name="PRQ1A1_TH">ความสนุกในฤดูร้อน</string>
    <string name="PRQ1A2_TH">ความรัก</string>
    <string name="PRQ1_correct_TH">คำว่า “Despacito” แปลว่าช้าๆ เพลงนี้จึงเกี่ยวกับการที่นักร้องต้องการพัฒนาความรักครั้งนี้ไปอย่างช้าๆ แต่ความหมายก็ไม่สำคัญเท่าความจริงที่ว่าเพลงนี้เป็นเพลงสไตล์เร็กเกตันเพลงแรกที่ได้ที่ 1 ในบิลบอร์ดชาร์ต</string>
    <string name="PRQ2_TH">เพลงสไตล์เร็กเกตันมีมานานเท่าไรแล้ว</string>
    <string name="PRQ2A_TH">ทศวรรต 1960</string>
    <string name="PRQ2A2_TH">ทศวรรต 1990</string>
    <string name="PRQ2_correct_TH">เพราะชื่อที่คล้ายคลึงกันอาจทำให้เพลงสไตล์เร็กเกตันถูกจำสลับกับเพลงสไตล์เร็กเกไปบ้าง ที่จริงแล้วเร็กเกตันเกิดในทศวรรตที่ 1990 ในเปอร์โตริโก้ ส่วนเพลงเร็กเก้เกิดในทศวรรต 1960 ในจาไมก้า</string>
    <string name="PRQ3_TH">เร็กเกตันมีมานานกว่า 20 ปีแล้ว เพราะเหตุใดดนตรีสไตล์นี้ถึงเพิ่งจะมาเป็นที่นิยมในวงกว้าง</string>
    <string name="PRQ3A1_TH">เพราะเร็กเกตันถูกมองว่าเป็นเพลงใต้ดินมาเป็นเวลานาน</string>
    <string name="PRQ3A2_TH">เพราะเร็กเกตันช่วงแรกยังไม่เพราะ</string>
    <string name="PRQ3_correct_TH">ด้วยเนื้อเพลงและท่าเต้นยั่วยวน เพลงสไตล์เร็กเกตันจึงถูกมองว่าเป็นเพลงใตเ้ดินอยู่นาน ส่งผลให้ค่ายเพลงใหญ่ไม่กล้าสนับสนุนเพลงแนวนี้</string>
</resources>