<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.awos.finalproject_jingyuepim.ReportActivity">

    <EditText
        android:id="@+id/report_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/report_name"/>
    <EditText
        android:id="@+id/report_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/report_here"/>

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_1"
            android:textColor="@android:color/white"
            android:background = "@drawable/roundedbutton"
            android:padding="15dp"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read"
            android:textColor="@android:color/white"
            android:background = "@drawable/roundedbutton"
            android:padding="15dp"/>
    </LinearLayout>

</LinearLayout>
